Adding And Fixing

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <div class="bg-dark">
             <div class="name">IGN</div>
             <div class="title n1">ARR Craib MSA Scottish Rally They Champion</div>
+            <button class="info1">More Info</button>
         </div>       
         </div>
 
@@ -37,6 +38,7 @@
                     <div class="bg-dark">
             <div class="name">IGN</div>
             <div class="title n2">ARR Craib MSA Scottish Rally They Champion</div>
+            <button class="info1">More Info</button>            
         </div>
         </div>
     </div>
@@ -44,72 +46,85 @@
                 <div class="bg-dark">
             <div class="name">IGN</div>
             <div class="title n3">ARR Craib MSA Scottish Rally They Champion</div>
+            <button class="info1">More Info</button>            
         </div>
     </div>
         <div class="latest-n4">
                 <div class="bg-dark">
             <div class="name">IGN</div>
             <div class="title n4">ARR Craib MSA Scottish Rally They Champion</div>
+            <button class="info1">More Info</button>            
         </div>
     </div>
         <div class="latest-n5">
             <div class="bg-dark">
             <div class="name">IGN</div>
             <div class="title n5">ARR Craib MSA Scottish Rally They Champion</div>
+            <button class="info1">More Info</button>
+
             </div>
         </div>
         </div>
 <hr>
+<div class="headline">POPULAR ARTICLES</div>
 <div class="container">
 <div class="latest-n1 news1">
         <div class="bg-dark">
         <div class="name ">IGN</div>
-        <div class="title n1">ARR Craib MSA Scottish Rally They Champion</div>
+        <div class="title n1 p-name1"></div>
+        <button class="info1">More Info</button>
     </div>       
     </div>
 
     <div class="latest-n2 news2">
         <div>
                 <div class="bg-dark">
-        <div class="name">IGN</div>
-        <div class="title n2">ARR Craib MSA Scottish Rally They Champion</div>
+        <div class="name ">IGN</div>
+        <div class="title n2 p-name2"></div>
+        <button class="info1">More Info</button>
     </div>
     </div>
 </div>
     <div class="latest-n3 news3">
             <div class="bg-dark">
-        <div class="name">IGN</div>
-        <div class="title n3">ARR Craib MSA Scottish Rally They Champion</div>
+        <div class="name ">IGN</div>
+        <div class="title n3 p-name3"></div>
+        <button class="info1">More Info</button>
     </div>
 </div>
     <div class="latest-n4 news4">
             <div class="bg-dark">
-        <div class="name">IGN</div>
-        <div class="title n4">ARR Craib MSA Scottish Rally They Champion</div>
+        <div class="name ">IGN</div>
+        <div class="title n4 p-name4"></div>
+        <button class="info1">More Info</button>
     </div>
 </div>
 <div class="latest-n5 news5">
     <div class="bg-dark">
-    <div class="name">IGN</div>
-    <div class="title n5">ARR Craib MSA Scottish Rally They Champion</div>
+    <div class="name ">IGN</div>
+    <div class="title n5 p-name5"></div>
+    <button class="info1">More Info</button>
     </div>
 </div>
-<div class="latest-n5 news5">
+<div class="latest-n5 news6">
         <div class="bg-dark">
-        <div class="name">IGN</div>
-        <div class="title n5">ARR Craib MSA Scottish Rally They Champion</div>
+        <div class="name ">IGN</div>
+        <div class="title n5 p-name6"></div>
+        <button class="info1">More Info</button>
         </div>
     </div>
-<div class="latest-n5 news5">
+<div class="latest-n5 news7">
         <div class="bg-dark">
-        <div class="name">IGN</div>
-        <div class="title n5">ARR Craib MSA Scottish Rally They Champion</div>
+        <div class="name ">IGN</div>
+        <div class="title n5 p-name7"></div>
+        <button class="info1">More Info</button>
         </div>
     </div>
-<div class="latest-n5 news5">
+<div class="latest-n5 news8">
         <div class="bg-dark">
-        <div class="name">IGN</div>
-        <div class="title n5">ARR Craib MSA Scottish Rally They Champion</div>
+        <div class="name ">IGN</div>
+        <div class="title n5 p-name8"></div>
+        <button class="info1">More Info</button>
         </div>
     </div>
 </div>
